// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`bce integration dev server watches for changes and rebuilds correctly 1`] = `
"{
  "manifest_version": 3,
  "name": "Test",
  "version": "0.0.1",
  "background": {
    "service_worker": "compose.js",
    "type": "module"
  },
  "content_scripts": [
    {
      "js": [
        "src/solace.js"
      ]
    }
  ]
}"
`;

exports[`bce integration dev server watches for changes and rebuilds correctly 2`] = `
"class o{constructor(){console.log("Solace")}}new o;
"
`;

exports[`bce integration dev server watches for changes and rebuilds correctly 3`] = `
"{
  "manifest_version": 3,
  "name": "Test",
  "version": "0.0.1",
  "background": {
    "service_worker": "compose.js",
    "type": "module"
  },
  "content_scripts": [
    {
      "js": [
        "src/solace.js"
      ]
    }
  ]
}"
`;

exports[`bce integration dev server watches for changes and rebuilds correctly 4`] = `
"class o{constructor(){console.log("Solace")}}new o;
"
`;

exports[`bce integration dev server watches for changes and rebuilds correctly 5`] = `
"{
  "manifest_version": 3,
  "name": "Test",
  "version": "0.0.1",
  "background": {
    "service_worker": "compose.js",
    "type": "module"
  },
  "content_scripts": [
    {
      "js": []
    }
  ]
}"
`;
